<resources>
    <string name="app_name">MyNews</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="arts">Arts</string>
    <string name="travel">Travel</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_app">Close App</string>
    <string name="most_popular">Most popular</string>
    <string name="top_stories">Top stories</string>
    <string name="politics">politics</string>
    <string name="enterperneurs">enterperneurs</string>
    <string name="search_query_hint">Search term</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="search_btn">search</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="news_image">News Image</string>
</resources>
