<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/settings_margin"
    android:orientation="vertical"
    tools:context=".Controller.Activities.SearchSelectorActivity">

    <include
        layout="@layout/search_query_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/settings_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:text="@string/begin_date" />

            <TextView
                android:id="@+id/activity_search_begin_date_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/settings_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:text="@string/end_date"/>

            <TextView
                android:id="@+id/activity_search_end_date_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin" />
        </LinearLayout>
    </LinearLayout>
    <include
        layout="@layout/categories_checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/activity_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        android:layout_marginTop="@dimen/settings_margin" />
</android.support.v7.widget.LinearLayoutCompat>